# cookiecutter-data-science

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.repo_name }}/: .dvcignore  .env  .envrc  .gitignore  .secrets  Makefile  README.md  pyproject.toml
{{ cookiecutter.repo_name }}/docs/stylesheets/: extra.css
{{ cookiecutter.repo_name }}/notebooks/: README.md
{{ cookiecutter.repo_name }}/resources/sql_queries/: README.md
{{ cookiecutter.repo_name }}/{{ cookiecutter.package_name }}/conf/: config.yaml
{{ cookiecutter.repo_name }}/{{ cookiecutter.package_name }}/conf/aws_infos/: prod.yaml  stage2.yaml
{{ cookiecutter.repo_name }}/{{ cookiecutter.package_name }}/conf/snow_infos/: dev.yaml  prod.yaml  stage2.yaml
{{ cookiecutter.repo_name }}/{{ cookiecutter.package_name }}/src/data/: get_data.py  preprocess.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.package_name }}/src/models/: predict.py
{{ cookiecutter.repo_name }}_/: .dvcignore  Makefile  README.md  pre-commit-config.yaml
{{ cookiecutter.repo_name }}_/docs/: gen_ref_pages.py
{{ cookiecutter.repo_name }}_/logs/: README.md
{{ cookiecutter.repo_name }}_/models/: README.md
{{ cookiecutter.repo_name }}_/reports/: README.md
{{ cookiecutter.repo_name }}_/{{ cookiecutter.package_name }}/conf/: config.yaml
{{ cookiecutter.repo_name }}_/{{ cookiecutter.package_name }}/conf/aws_infos/: dev.yaml  prod.yaml
{{ cookiecutter.repo_name }}_/{{ cookiecutter.package_name }}/conf/snow_infos/: dev.yaml  prod.yaml  stage2.yaml
{{ cookiecutter.repo_name }}_/{{ cookiecutter.package_name }}/src/: utils.py
{{ cookiecutter.repo_name }}_/{{ cookiecutter.package_name }}/src/data/: preprocess.py
