[tool.poetry]
name = "{{ cookiecutter.repo_name }}"
description = "{{ cookiecutter.description }}"
version = "0.1.0"
license = "Proprietary"
authors = ["Data Science"]
readme = "README.md"
repository = "https://github.com/betclicgroup/{{ cookiecutter.repo_name }}.git"
#documentation = "<confluence URL>"
keywords = []
packages = [{include = "{{ cookiecutter.repo_name }}"}]

[tool.poetry.scripts]
main = "{{ cookiecutter.repo_name }}.main:main"

## Good practice to define some groups like dev, codequality, test or doc as optional using the following lines
#[tool.poetry.group.<group_name>]
#optional = true

[tool.poetry.dependencies]
python = "~{{ cookiecutter.python_version }}"

[[tool.poetry.source]]
name = "betclic"
url = "https://repository.betclic.net/artifactory/api/pypi/pypi/simple"
priority = "primary"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 120
